--- a/README
+++ b/README
@@ -9,7 +9,10 @@ iH3C是一个好用的、带自动断线重连功能的H3C客户端。
 3)安装winpcap驱动包。如果还没有，请到
   http://www.winpcap.org/install/default.htm下载。
 
-4)用记事本打开pw.data，将其中的user和password改成你的用户名和密码。
+4)用记事本打开pw.data，将其中的user和password改成你的用户名和密码。第
+  三行的数字表示H3C连接位于哪张网卡，默认为1。如果你有多张网卡，尝试
+  修改第三行的数字直至成功连接上网络。我们很快将添加列出机器中所有网
+  卡供用户选择的功能。
 
 5)运行h3c_svr.exe。它会将自身注册为系统服务。
 
