--- a/trunk/README
+++ b/trunk/README
@@ -1,29 +1,33 @@
 iH3C是一个好用的、带自动断线重连功能的H3C客户端。
 
-如何使用：
+注意
 
-1)首先确保系统中不存在其它的正在运行的H3C客户端。如有，请卸载之。
+   1. 目前版本只支持单网卡的环境，在笔记本上的测试表明，必须删除(不是禁用)多余的网卡才可以正常上网。以后的版本会修正这个问题；如果你有兴趣解决它、或者你有改进iH3C的意向，请给我们写信，我们会在确认之后将你加进iH3C的项目里面来。欢迎感兴趣的朋友加入我们。
+   2. 经过测试，必须在系统卸载已有的H3C客户端才可以正常运行，包括inode、xlink、huaweiH3C。
 
-2)将软件包中的所有文件复制到你希望iH3C安家的目录下面。
+测试过的操作系统: Win XP, Win Vista, Win 2003, Win 2008
 
-3)安装winpcap驱动包。如果还没有，请到
-  http://www.winpcap.org/install/default.htm下载。
+本程序遵循GLPV3开放源代码，欢迎大家加入一起写代码。
 
-4)用记事本打开pw.data，将其中的user和password改成你的用户名和密码。第
-  三行的数字表示H3C连接位于哪张网卡，默认为1。如果你有多张网卡，尝试
-  修改第三行的数字直至成功连接上网络。我们很快将添加列出机器中所有网
-  卡供用户选择的功能。
+h3c_svr.exe是服务程序，请不要直接运行。(以下步骤必须在配置好了pw.data之后才能见效)
 
-5)运行h3c_svr.exe。它会将自身注册为系统服务。
+   1. 如果是通过安装包安装好的版本，请直接在cmd中运行:net start myh3c。
+   2. 如果重新安装了系统，请运行 h3c_svr.exe -i 注册成服务,然后如1般执行。
+   3. 卸载服务请执行h3c_svr.exe -u。
+   4. 查看网卡列表请执行h3c_svr.exe -l。 
 
-6)运行H3CWatcher.exe。现在你应该可以在系统托盘区（通常在屏幕的右下角）
-  看到iH3C的图标，同时H3C连接的提示气泡也将出现。
+pw.data配置指南: 第一行:用户名。 第二行:密码。 第三行:使用H3C认证的网卡序号(如果0不行可以尝试1,2,3....)。
 
-7)iH3C是绿色的；除了它在系统中注册的服务。要卸载服务，请在命令行下执行
-  h3c_svr -u。你可以在命令行下执行 h3c_svr.exe --help 以获得更多使用信
-  息。
+例子:
+
+    * user
+    * pass
+    * 0 
+
+H3CWatcher是监视网络状况并且自动重连的程序，就算不运行也不影响H3C认证。它会在掉线时自动重新连接认证。 
+
 
 最新的下载请到http://code.google.com/p/ih3c/downloads/list。
 中山大学05级 计算机科学与技术
-杨潇: yangxiaogreetings@gmail.com
 胡杨: coolcute@gmail.com
+杨潇: yangxiaogreetings@gmail.com
